--- a/po/da.po
+++ b/po/da.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.3.2svn-r02842\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2009-03-13 14:57+0100\n"
-"Last-Translator: Vidar Jon Bauge <vidarjb@gmail.com>\n"
+"PO-Revision-Date: 2009-03-16 21:11+0100\n"
+"Last-Translator: charlie tyrrestrup <chalze06@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -67,7 +67,7 @@ msgstr "_Vis"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr "_HjÃ¦lp"
+msgstr "_Hjælp"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -99,7 +99,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr "VM-stÃ¸rrelse"
+msgstr "VM-størrelse"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -123,11 +123,11 @@ msgstr "Stop"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr "FortsÃ¦t"
+msgstr "Fortsæt"
 
 #: ../src/interface.c:240
 msgid "Term"
-msgstr "TerminÃ©r"
+msgstr "Terminator"
 
 #: ../src/interface.c:245
 msgid "Kill"
@@ -178,7 +178,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask er bygget pÃ¥ Xfce4 Task Manager af:\n"
+"LXTask er bygget på Xfce4 Task Manager af:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
@@ -197,7 +197,7 @@ msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr "LetvÃ¦gts opgavebehandler for LXDE projektet"
+msgstr "Letvægts opgavebehandler for LXDE projektet"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -205,7 +205,7 @@ msgstr "Fejl"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr "BekrÃ¦ft"
+msgstr "Bekræft"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
