Spanish translations from Pootle

--- a/po/es.po
+++ b/po/es.po
@@ -11,13 +11,14 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2008-12-09 21:23-0500\n"
-"Last-Translator: Julio Napurí Carlos <julionc@gmail.com>\n"
+"PO-Revision-Date: 2009-03-22 02:14+0100\n"
+"Last-Translator: Guillermo Iguaran <johnnyprez@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Spanish\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
@@ -47,7 +48,7 @@ msgstr "¿Quiere terminar la tarea?"
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Memoria: %d MiB de %d MiB"
+msgstr "Memoria: %d MB de %d MB usados"
 
 #: ../src/functions.c:148
 #, c-format
