--- a/po/da.po
+++ b/po/da.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.3.2svn-r02842\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2009-03-16 21:11+0100\n"
+"PO-Revision-Date: 2009-03-23 16:42+0100\n"
 "Last-Translator: charlie tyrrestrup <chalze06@gmail.com>\n"
 "Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
@@ -184,7 +184,9 @@ msgstr ""
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr "Vidar Jon Bauge, Charlie Tyrrestrup"
+msgstr ""
+"Vidar Jon Bauge \n"
+"Charlie Tyrrestrup\n"
 
 #: ../src/interface.c:355
 msgid "LXTask"
