--- a/po/sl.po
+++ b/po/sl.po
@@ -1,4 +1,3 @@
-﻿# English/GB translation of xfce4-taskmanager.
 # Copyright (C) 2007 THE xfce4-taskmanager'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4-taskmanager package.
 # Jeff Bailes <thepizzaking@gmail.com>, 2007.
@@ -10,15 +9,17 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2009-04-04 19:43+0100\n"
+"PO-Revision-Date: 2009-04-09 12:26+0200\n"
 "Last-Translator: Matej <paxmanpwnz@gmail.com>\n"
 "Language-Team: Slovenian <paxmanpwnz@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
+"n%100==4 ? 2 : 3);\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Slovenian\n"
 "X-Poedit-Country: SLOVENIA\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -27,14 +28,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
-"Signala %d ni bilo možno poslati opravilu z IDjem %d\n"
+"Signala %d ni bilo mogoče poslati opravilu z IDjem %d\n"
 "\n"
 "%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Prioritete %d ni bilo možno nastaviti opravilu z IDjem %d"
+msgstr "Prioritete %d ni bilo mogoče nastaviti opravilu z IDjem %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -47,7 +48,7 @@ msgstr "Ali res želite končati opravilo?"
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Pomnilnik: zasedeno %d kB od %d kB"
+msgstr "Zasedenost pomnilnika: %d MB od %d MB"
 
 #: ../src/functions.c:148
 #, c-format
@@ -80,7 +81,7 @@ msgstr "zasedenost pomnilnika"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr "več"
+msgstr "Podrobnosti"
 
 #: ../src/interface.c:166
 msgid "Command"
@@ -96,11 +97,11 @@ msgstr "CPE %"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr "RSS"
+msgstr "Sredstva"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr "VM-velikost"
+msgstr "Poraba NS"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -112,7 +113,7 @@ msgstr "Stanje"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr "Prio"
+msgstr "Prioriteta"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -120,7 +121,7 @@ msgstr "PPID"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr "Končaj"
+msgstr "Ustavi"
 
 #: ../src/interface.c:235
 msgid "Continue"
@@ -164,7 +165,7 @@ msgstr "Prikaži uporabnikova opravila"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "Prikaži root opravila"
+msgstr "Prikaži skrbnikova opravila"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
@@ -172,7 +173,7 @@ msgstr "Prikaži ostala opravila"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr "Prikaži pomnilnik, ki ga zaseda predpomnilnik, kot prosto"
+msgstr "Prikaži pomnilnik, ki ga zaseda predpomnilnik, kot prostega"
 
 #: ../src/interface.c:342
 msgid ""
@@ -210,4 +211,3 @@ msgstr "Potrdi"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
-
