--- a/po/fr.po
+++ b/po/fr.po
@@ -9,12 +9,13 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-02-09 02:51+0100\n"
-"PO-Revision-Date: 2007-01-13 23:54+0100\n"
-"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
+"PO-Revision-Date: 2009-04-10 01:34+0200\n"
+"Last-Translator: Cilyan Olowen <gaknar@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -40,7 +41,7 @@ msgstr "Vraiment terminer la tâche?"
 #: ../src/functions.c:142
 #, fuzzy, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d Ko de %d Ko utilisés"
+msgstr "Mémoire : %d Ko de %d Ko utilisés"
 
 #: ../src/functions.c:148
 #, c-format
