--- a/po/pl.po
+++ b/po/pl.po
@@ -11,14 +11,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-02-09 02:51+0100\n"
+"POT-Creation-Date: 2009-04-15 19:58+0200\n"
 "PO-Revision-Date: 2009-02-19 18:57-0000\n"
 "Last-Translator: Artur Kruszewski <mazdac@gmail.com>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 "X-Generator: KBabel 1.11.4\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
@@ -208,4 +209,3 @@ msgstr "Błąd"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Potwierdź"
-
