--- a/po/sl.po
+++ b/po/sl.po
@@ -1,4 +1,4 @@
-﻿# Copyright (C) 2007 THE xfce4-taskmanager'S COPYRIGHT HOLDER
+# Copyright (C) 2007 THE xfce4-taskmanager'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4-taskmanager package.
 # Jeff Bailes <thepizzaking@gmail.com>, 2007.
 # , fuzzy
@@ -8,14 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-02-09 02:51+0100\n"
+"POT-Creation-Date: 2009-04-15 19:58+0200\n"
 "PO-Revision-Date: 2009-04-10 11:04+0100\n"
 "Last-Translator: Matej <paxmanpwnz@gmail.com>\n"
 "Language-Team: Slovenian <paxmanpwnz@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
+"%100==4 ? 2 : 3);\n"
 "X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Slovenian\n"
 "X-Poedit-Country: SLOVENIA\n"
@@ -207,4 +208,3 @@ msgstr "Napaka"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Potrdi"
-
