--- a/po/it.po
+++ b/po/it.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: xfce 4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2007-06-25 15:50+0200\n"
-"Last-Translator: Fabio Riga <usul@aruba.it>\n"
+"PO-Revision-Date: 2009-04-17 19:28+0200\n"
+"Last-Translator: Alessandro Pellizzari <alex@amiran.it>\n"
 "Language-Team: Italian <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.1.0\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -23,11 +24,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Impossibile inviare segnale %d al processo con ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Impossibile impostare la priorità %d per il processo con ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -38,31 +42,30 @@ msgid "Really terminate the task?"
 msgstr "Terminare il processo?"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d kB su %d kB usati"
+msgstr "Memoria: %d MB su %d MB usati"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Uso CPU: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taskmanager"
+msgstr "Gestione Processi"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_File"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "V_isualizza"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "Ai_uto"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -74,7 +77,7 @@ msgstr "uso memoria"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr "Maggiori dettagli"
+msgstr "maggiori dettagli"
 
 #: ../src/interface.c:166
 msgid "Command"
@@ -94,7 +97,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr "Memoria"
+msgstr "Dim. VM"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -106,7 +109,7 @@ msgstr "Stato"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -130,27 +133,27 @@ msgstr "Uccidi"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Priorità"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -166,39 +169,41 @@ msgstr "Mostra altri processi"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr "Mostra la memoria usata per la scorta come libera"
+msgstr "Mostra la memoria usata per la cache come libera"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask è derivato da Xfce4 Task Manager by:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Alessandro Pellizzari <alex@amiran.it>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 team LXDE"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Gestore di processi leggero per il progetto LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Errore"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Conferma"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
