Updated Brazilian Portuguese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-04-27 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by
+	Henrique P Machado.
+
 2009-03-12 Og Maciel <ogmaciel@gnome.org>
 
 	* LINGUAS: Updated.
