--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-15 19:58+0200\n"
+"POT-Creation-Date: 2009-04-27 21:52-0400\n"
 "PO-Revision-Date: 2007-03-11 19:41-0300\n"
 "Last-Translator: Henrique P. Machado <zehrique@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
@@ -86,7 +86,7 @@ msgstr "Comando"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr "Usuario"
+msgstr "Usuário"
 
 #: ../src/interface.c:178
 msgid "CPU%"
@@ -158,11 +158,11 @@ msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr "Mostrar tarefas do usuario"
+msgstr "Mostrar tarefas do usuário"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "Mostrar tarefas do superusuario"
+msgstr "Mostrar tarefas do superusuário"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
