--- a/po/ru.po
+++ b/po/ru.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-04-25 10:36+0200\n"
-"Last-Translator: Александр Голубев <ag@lhp.ru>\n"
+"PO-Revision-Date: 2009-04-29 11:50+0200\n"
+"Last-Translator: Vitaly Pashkov <admin@fluda.net>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -195,7 +195,7 @@ msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr "Легкий менеджер задачи для проекта LXDE"
+msgstr "Легкий диспетчер задач для проекта LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
