--- a/po/nl.po
+++ b/po/nl.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: xfce 4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2007-01-08 13:13+0100\n"
-"Last-Translator: Stephan Arts <stephan@xfce.org>\n"
+"PO-Revision-Date: 2009-05-04 15:33+0100\n"
+"Last-Translator: Sander De Voogdt <celettu@gmail.com>\n"
 "Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
@@ -23,46 +23,48 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Kon opdracht %d niet zenden naar de taak met ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Kon prioriteit %d niet geven aan taak met ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Taak echt geforceerd afsluiten?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Taak echt afsluiten?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Geheugen: %d MB van %d MB gebruikt"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "CPU gebruik: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "xfce4-taakbeheer"
+msgstr "Taakbeheer"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "Bestand"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "Beeld"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "Help"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -106,7 +108,7 @@ msgstr "Status"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -126,31 +128,31 @@ msgstr "Term"
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr "Kill"
+msgstr "Geforceerd afsluiten"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Prioriteit"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -166,36 +168,39 @@ msgstr "Toon andere taken"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Geheugen dat niet gebruikt wordt door cache weergeven als vrij"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"LXTask is afgeleid van de Xfce4 Task Manager door:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr ""
+msgstr "Sander De Voogdt <celettu@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Lichtgewicht taakbeheer applicatie voor LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Fout"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Bevestig"
+
