--- a/po/ur.po
+++ b/po/ur.po
@@ -5,15 +5,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-taskmanager\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2007-10-27 17:04+0500\n"
-"Last-Translator: Muhammad Ali Makki <makk.ma@gmail.com>\n"
+"POT-Creation-Date: 2009-04-15 21:20+0200\n"
+"PO-Revision-Date: 2009-05-10 04:01+0500\n"
+"Last-Translator: Muhammad Ali Makki <makki.ma@gmail.com>\n"
 "Language-Team: Urdu <makki.ma@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-Language: Urdu\n"
 "X-Poedit-Country: PAKISTAN\n"
 "X-Poedit-SourceCharset: utf-8\n"
@@ -25,54 +26,56 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"سگنل %d بمع آئی ڈی %d ٹاسک کو ارسال نہیں کیا جاسکتا\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "اہمیت %d بمع آئی ڈی %d ٹاسک پر مرتب نہیں کی جاسکتی"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr "کیا واقعی اس ٹاسک کو قتل کردیا جائے؟"
+msgstr "کیا واقعی اس پروگرام کو قتل کردیں؟"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr "کیا واقعی اس ٹاسک کو بند کردیا جائے؟"
+msgstr "کیا واقعی اس پروگرام کو بند کردیں؟"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d kB برائے %d kB استعمال شدہ"
+msgstr "یاداشت: %d م.ب برائے %d م.ب استعمال کردہ"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "سی پی یو استعمال: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "ایکسفس4-ٹاسک منیجر"
+msgstr "ٹاسک منیجر"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_فائل"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_منظر"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_ہدایات"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr "cpu استعمال"
+msgstr "سی پی یو استعمال"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr "یاداشت کا استعمال"
+msgstr "یاداشت استعمال"
 
 #: ../src/interface.c:140
 msgid "more details"
@@ -108,7 +111,7 @@ msgstr "حالت"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "اہمیت"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -132,75 +135,81 @@ msgstr "قتل کریں"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "اہمیت"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr "صارف کی ٹاسک ظاہر کریں"
+msgstr "صارف کی ٹاسک دکھائیں"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "روٹ کی ٹاسک ظاہر کریں"
+msgstr "روٹ کی ٹاسک دکھائیں"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr "دیگر ٹاسک ظاہر کریں"
+msgstr "دیگر ٹاسک دکھائیں"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr "کیشے کی استعمال شدہ یاداشت بطور خالی دکھائیں"
+msgstr "کیشے کی استعمال کردہ یاداشت کو بطور خالی دکھائیں"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"ایل ایکس ٹاسک ایکسفس4 ٹاسک منیجر سے منتقل کیا گیا ہے از:\n"
+"  * جوہانز زیلنر <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
 msgstr ""
+"محمد علی مکی\n"
+"makki.ma@gmail.com\n"
+"اردو کوڈر لینکس فورم\n"
+"http://www.urducoder.com\n"
+"مکی کا بلاگ\n"
+"http://makki.urducoder.com"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "ایل ایکس ٹاسک"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "کاپی رائٹ (C) 2008 ایل ایکس ڈی ای ٹیم"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "ہلکا پھلکا ٹاسک منیجر برائے ایل ایکس ڈی ای پراجیکٹ"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "غلطی"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "تصدیق"
 
-#~ msgid "%0.0f %%"
-#~ msgstr "%0.0f %%"
