--- a/po/pt.po
+++ b/po/pt.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-01-14 22:31+0100\n"
-"Last-Translator: Álvaro Morais <alvarommorais@gmail.com>\n"
+"PO-Revision-Date: 2009-05-19 14:14-0000\n"
+"Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT <alvarommorais@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -25,24 +25,27 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Não foi possível enviar o sinal %d à tarefa com a ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Não foi possível definir a prioridade %d para a tarefa com a ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr "Matar a tarefa?"
+msgstr "Matar a tarefa ?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr "Terminar a tarefa?"
+msgstr "Terminar a tarefa ?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Memória: %d MB de %d MB usados"
+msgstr "Memória: usados %d MB de %d MB"
 
 #: ../src/functions.c:148
 #, c-format
@@ -67,11 +70,11 @@ msgstr "_Ajuda"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr "uso de cpu"
+msgstr "utilização do cpu"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr "uso de memória"
+msgstr "utilização de memória"
 
 #: ../src/interface.c:140
 msgid "more details"
@@ -95,7 +98,7 @@ msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr "Tamanho VM"
+msgstr "Tamanho da MV"
 
 #: ../src/interface.c:196
 msgid "PID"
@@ -107,7 +110,7 @@ msgstr "Estado"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Prio"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -135,52 +138,54 @@ msgstr "Prioridade"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr "Exibir processos do utilizador"
+msgstr "Mostrar tarefas do utilizador"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr "Exibir processos do root"
+msgstr "Mostrar tarefas de root"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr "Exibir outros processos"
+msgstr "Mostrar outras tarefas"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr "Mostrar memória de cache como livre"
+msgstr "Mostrar memória usada pela cache como livre"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask é uma derivação do Xfce4 Task Manager programado por:\n"
+"LXTask foi baseado no Xfce4 Task Manager de:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
-msgstr "Álvaro Morais <alvarommorais@gmail.com>"
+msgstr ""
+"Álvaro Morais <alvarommorais@gmail.com>\n"
+"Sérgio Marques<smarquespt@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
@@ -205,3 +210,4 @@ msgstr "Confirmar"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
+
