--- a/po/es.po
+++ b/po/es.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-03-22 19:29+0100\n"
-"Last-Translator: Guillermo Iguaran <johnnyprez@gmail.com>\n"
+"PO-Revision-Date: 2009-05-31 16:00+0200\n"
+"Last-Translator: Hugo Florentino <sysadmin@cips.cu>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -67,9 +67,10 @@ msgstr "_Archivo"
 msgid "_View"
 msgstr "_Ver"
 
+# subrayar la y puede resultar confuso con algunas tipografías
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr "A_yuda"
+msgstr "Ay_uda"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -173,14 +174,14 @@ msgstr "Mostrar otras tareas"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr "Mostrar la memoria caché libre"
+msgstr "Mostrar la memoria usada por la caché como libre"
 
 #: ../src/interface.c:342
 msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask es un derivado de Xfce4 Task Manager por:\n"
+"LXTask se deriva de Xfce4 Task Manager por:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
@@ -190,7 +191,8 @@ msgstr ""
 "Xoan Sampaiño <xoansampainho@gmail.com>, 2008\n"
 "Daniel Pacheco <daniel@tunki.org>, 2008\n"
 "Julio Napurí Carlos <julionc@gmail.com>, 2008\n"
-"Guillermo Iguarán <tronador@cuteam.org>, 2009"
+"Guillermo Iguarán <tronador@cuteam.org>, 2009\n"
+"Hugo Florentino <sysadmin@cips.cu>, 2009"
 
 #: ../src/interface.c:355
 msgid "LXTask"
