--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-04-16 10:20+0200\n"
-"Last-Translator: Cilyan Olowen <gaknar@gmail.com>\n"
+"PO-Revision-Date: 2009-06-07 21:41+0200\n"
+"Last-Translator: Cyprien Gay <cyprien.gay@aful.org>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -89,7 +89,7 @@ msgstr "Utilisateur"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr "CPU%"
+msgstr "%CPU"
 
 #: ../src/interface.c:184
 msgid "RSS"
@@ -176,7 +176,7 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
-"LXTask est dérivé du Gestionnaire des tâches d'Xfce4 par:\n"
+"LXTask est dérivé du Gestionnaire des tâches Xfce4 par:\n"
 "    * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
