--- a/po/sl.po
+++ b/po/sl.po
@@ -6,17 +6,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-taskmanager\n"
+"Project-Id-Version: LXTask 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-04-10 11:04+0100\n"
-"Last-Translator: Matej <paxmanpwnz@gmail.com>\n"
+"POT-Creation-Date: 2009-04-15 21:20+0200\n"
+"PO-Revision-Date: 2009-06-28 16:54+0100\n"
+"Last-Translator: Matej Gačnik <paxmanpwnz@gmail.com>\n"
 "Language-Team: Slovenian <paxmanpwnz@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n"
-"%100==4 ? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 "X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Slovenian\n"
 "X-Poedit-Country: SLOVENIA\n"
@@ -65,7 +64,7 @@ msgstr "_Datoteka"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr "_Ogled"
+msgstr "P_ogled"
 
 #: ../src/interface.c:80
 msgid "_Help"
@@ -199,7 +198,7 @@ msgstr "Vse pravice pridržane (C) 2008 ekipa LXDE "
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr "Lahki Nadzornik opravil za projekt LXDE"
+msgstr "Nadzornik opravil projekta LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
@@ -208,3 +207,4 @@ msgstr "Napaka"
 #: ../src/utils.c:56
 msgid "Confirm"
 msgstr "Potrdi"
+
