--- a/po/el.po
+++ b/po/el.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2008-04-24 19:25+0300\n"
-"Last-Translator: Evaggelos Balaskas <ebalaskas@ebalaskas.gr>\n"
+"PO-Revision-Date: 2009-07-22 00:04+0200\n"
+"Last-Translator: George Vasilakos <forfolias@linuxteam.cs.teilar.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,11 +23,14 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Αδύνατη η αποστολή σήματος %d στην εργασία με ID %d\n"
+"\n"
+"%s"
 
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr ""
+msgstr "Αδύνατος ο ορισμός προτεραιότητας %d στην εργασία με ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -38,31 +41,30 @@ msgid "Really terminate the task?"
 msgstr "Επιμένετε να τερματιστεί η εργασία;"
 
 #: ../src/functions.c:142
-#, fuzzy, c-format
+#, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "%d kB από %d kB χρησιμοποιούνται"
+msgstr "Μνήμη: %d kB από %d kB χρησιμοποιούνται"
 
 #: ../src/functions.c:148
 #, c-format
 msgid "CPU usage: %0.0f %%"
-msgstr ""
+msgstr "Χρήση CPU: %0.0f %%"
 
 #: ../src/interface.c:53
-#, fuzzy
 msgid "Task Manager"
-msgstr "Διαχειριστής εργασιών xfce4"
+msgstr "Διαχειριστής εργασιών"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Αρχείο"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Προβολή"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Βοήθεια"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
@@ -106,7 +108,7 @@ msgstr "Κατάσταση"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Προτ"
 
 #: ../src/interface.c:214
 msgid "PPID"
@@ -130,27 +132,27 @@ msgstr "Βίαιος τερματισμός"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Προτεραιότητα"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "-10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "-5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
@@ -173,32 +175,38 @@ msgid ""
 "LXTask is derived from Xfce4 Task Manager by:\n"
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
+"Το LXTask προέρχεται από το Xfce4 Task Manager από τον:\n"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
 msgid "translator-credits"
 msgstr ""
+"Κούτσικος Γιώργος <oege89@hotmail.com>\n"
+"Βασιλάκος Γιώργος  <forfolias@linuxteam.cs.teilar.gr>\n"
+"Ριζόπουλος Γιώργος <georgerizopoulos28@gmail.com>"
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
 msgid "Copyright (C) 2008 LXDE team"
-msgstr ""
+msgstr "Copyright (C) 2008 LXDE team"
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Ελαφρύς διαχειριστής εργασιών για το project LXDE"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Σφάλμα"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Επιβεβαίωση"
 
 #~ msgid "%0.0f %%"
 #~ msgstr "%0.0f %%"
+
