--- a/po/uk.po
+++ b/po/uk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-03-04 22:58+0100\n"
+"PO-Revision-Date: 2009-07-28 16:18+0200\n"
 "Last-Translator: Y P <yupadmin@gmail.com>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
@@ -71,7 +71,7 @@ msgstr "використання пам’яті"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr "детальніше"
+msgstr "Більше деталей"
 
 #: ../src/interface.c:166
 msgid "Command"
