--- a/po/fr.po
+++ b/po/fr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-06-07 21:41+0200\n"
-"Last-Translator: Cyprien Gay <cyprien.gay@aful.org>\n"
+"PO-Revision-Date: 2009-09-07 22:26+0200\n"
+"Last-Translator: Cilyan Olowen <gaknar@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -31,7 +31,7 @@ msgstr ""
 #: ../src/xfce-taskmanager-linux.c:317
 #, c-format
 msgid "Couldn't set priority %d to the task with ID %d"
-msgstr "Impossible de régler la priorité %s pour la tâche d'ID %d"
+msgstr "Impossible de régler la priorité %d pour la tâche d'ID %d"
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
@@ -177,7 +177,7 @@ msgid ""
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
 "LXTask est dérivé du Gestionnaire des tâches Xfce4 par:\n"
-"    * Johannes Zellner <webmaster@nebulon.de>"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
