Updates from Pootle

--- a/po/bg.po
+++ b/po/bg.po
@@ -3,18 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 21:20+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2009-10-09 12:35+0200\n"
+"Last-Translator: Rossen Karpuzov <gustav cointech net>\n"
+"Language-Team: Mandriva User Group - Bulgaria <mandriva-bg@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Bulgarian\n"
+"X-Poedit-Country: BULGARIA\n"
 
 #: ../src/xfce-taskmanager-linux.c:303
 #, c-format
@@ -31,16 +32,16 @@ msgstr ""
 
 #: ../src/callbacks.c:56
 msgid "Really kill the task?"
-msgstr ""
+msgstr "Наистина ли щеубиете задачата?"
 
 #: ../src/callbacks.c:60
 msgid "Really terminate the task?"
-msgstr ""
+msgstr "Наистина ли ще преустановите задачата?"
 
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr ""
+msgstr "Памет: %d МБ от %d МБ използвана"
 
 #: ../src/functions.c:148
 #, c-format
@@ -49,75 +50,75 @@ msgstr ""
 
 #: ../src/interface.c:53
 msgid "Task Manager"
-msgstr ""
+msgstr "Мениджър на задачи"
 
 #: ../src/interface.c:66
 msgid "_File"
-msgstr ""
+msgstr "_Файл"
 
 #: ../src/interface.c:74
 msgid "_View"
-msgstr ""
+msgstr "_Изглед"
 
 #: ../src/interface.c:80
 msgid "_Help"
-msgstr ""
+msgstr "_Помощ"
 
 #: ../src/interface.c:104
 msgid "cpu usage"
-msgstr ""
+msgstr "Натоварване на процесора"
 
 #: ../src/interface.c:112
 msgid "memory usage"
-msgstr ""
+msgstr "Използване на памет"
 
 #: ../src/interface.c:140
 msgid "more details"
-msgstr ""
+msgstr "повече информация"
 
 #: ../src/interface.c:166
 msgid "Command"
-msgstr ""
+msgstr "Команда"
 
 #: ../src/interface.c:172
 msgid "User"
-msgstr ""
+msgstr "Потребител"
 
 #: ../src/interface.c:178
 msgid "CPU%"
-msgstr ""
+msgstr "Процесор%"
 
 #: ../src/interface.c:184
 msgid "RSS"
-msgstr ""
+msgstr "RSS"
 
 #: ../src/interface.c:190
 msgid "VM-Size"
-msgstr ""
+msgstr "Размер на ВП"
 
 #: ../src/interface.c:196
 msgid "PID"
-msgstr ""
+msgstr "PID"
 
 #: ../src/interface.c:202
 msgid "State"
-msgstr ""
+msgstr "Състояние"
 
 #: ../src/interface.c:208
 msgid "Prio"
-msgstr ""
+msgstr "Приор"
 
 #: ../src/interface.c:214
 msgid "PPID"
-msgstr ""
+msgstr "PPID"
 
 #: ../src/interface.c:230
 msgid "Stop"
-msgstr ""
+msgstr "Стоп"
 
 #: ../src/interface.c:235
 msgid "Continue"
-msgstr ""
+msgstr "Продължи"
 
 #: ../src/interface.c:240
 msgid "Term"
@@ -125,47 +126,47 @@ msgstr ""
 
 #: ../src/interface.c:245
 msgid "Kill"
-msgstr ""
+msgstr "Убиване"
 
 #: ../src/interface.c:250
 msgid "Priority"
-msgstr ""
+msgstr "Приоритет"
 
 #: ../src/interface.c:263
 msgid "  -10"
-msgstr ""
+msgstr "  -10"
 
 #: ../src/interface.c:268
 msgid "  -5"
-msgstr ""
+msgstr "  -5"
 
 #: ../src/interface.c:273
 msgid "    0"
-msgstr ""
+msgstr "    0"
 
 #: ../src/interface.c:278
 msgid "   5"
-msgstr ""
+msgstr "   5"
 
 #: ../src/interface.c:283
 msgid "   10"
-msgstr ""
+msgstr "   10"
 
 #: ../src/interface.c:306
 msgid "Show user tasks"
-msgstr ""
+msgstr "Показване на потребителските задачи"
 
 #: ../src/interface.c:311
 msgid "Show root tasks"
-msgstr ""
+msgstr "Покажи системните задачи (root)"
 
 #: ../src/interface.c:316
 msgid "Show other tasks"
-msgstr ""
+msgstr "Покажи други задачи"
 
 #: ../src/interface.c:321
 msgid "Show memory used by cache as free"
-msgstr ""
+msgstr "Покажи използваната памет за кеш като свободна"
 
 #: ../src/interface.c:342
 msgid ""
@@ -180,7 +181,7 @@ msgstr ""
 
 #: ../src/interface.c:355
 msgid "LXTask"
-msgstr ""
+msgstr "LXTask"
 
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:357
@@ -189,12 +190,13 @@ msgstr ""
 
 #: ../src/interface.c:358
 msgid "Lightweight task manager for LXDE project"
-msgstr ""
+msgstr "Lightweight мениджър на задачи за LXDE проект"
 
 #: ../src/utils.c:43
 msgid "Error"
-msgstr ""
+msgstr "Грешка"
 
 #: ../src/utils.c:56
 msgid "Confirm"
-msgstr ""
+msgstr "Потвърждение"
+
