--- a/po/gl.po
+++ b/po/gl.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-04-15 19:58+0200\n"
-"PO-Revision-Date: 2009-10-27 10:36+0100\n"
+"PO-Revision-Date: 2009-10-27 15:09+0100\n"
 "Last-Translator: Indalecio Freiría Santos <ifreiria@gmail.com>\n"
-"Language-Team: Galician <gl@li.org>\n"
+"Language-Team: Proxecto Trasno <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -43,7 +43,7 @@ msgstr "Desexa finalizar esta tarefa?"
 #: ../src/functions.c:142
 #, c-format
 msgid "Memory: %d MB of %d MB used"
-msgstr "Memoria: Usados %d MB de %d MB "
+msgstr "Memoria: Usados %d MB de %d MB"
 
 #: ../src/functions.c:148
 #, c-format
@@ -176,7 +176,7 @@ msgid ""
 "  * Johannes Zellner <webmaster@nebulon.de>"
 msgstr ""
 "LXTask derivase de Xfce4 Task Manager por:\n"
-"* Johannes Zellner <webmaster@nebulon.de>"
+"  * Johannes Zellner <webmaster@nebulon.de>"
 
 #. TRANSLATORS: Replace mw string with your names, one name per line.
 #: ../src/interface.c:347
