--- a/po/pt.po
+++ b/po/pt.po
@@ -8,15 +8,16 @@ msgstr ""
 "Project-Id-Version: lxtask 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-05-19 14:14-0000\n"
+"PO-Revision-Date: 2009-11-10 21:25+0100\n"
 "Last-Translator: Sérgio Marques <smarquespt@gmail.com>\n"
 "Language-Team: Portuguese PT <alvarommorais@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 1.1.0\n"
 "X-Poedit-Language: Portuguese\n"
 "X-Poedit-Country: PORTUGAL\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
@@ -202,7 +203,7 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Copyright (C) 2008 Equipa LXDE "
+msgstr "Copyright (C) 2008 Equipa LXDE"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
@@ -210,15 +211,15 @@ msgstr "Gestor de Tarefas para o projecto LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Preferências"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Taxa de actualização (segundos):"
 
 #: ../src/utils.c:43
 msgid "Error"
