--- a/po/uk.po
+++ b/po/uk.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: xfce4-taskmanager 0.4.0-rc1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-07-28 16:18+0200\n"
+"PO-Revision-Date: 2009-11-04 17:37+0100\n"
 "Last-Translator: Y P <yupadmin@gmail.com>\n"
 "Language-Team: Ukrainian\n"
 "MIME-Version: 1.0\n"
@@ -13,11 +13,11 @@ msgstr ""
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Керувати запущеними процесами"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Менеджер процесів"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
@@ -201,15 +201,15 @@ msgstr "Легкий менеджер задач для проекту LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Налаштування"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "Загальне"
 
 #: ../src/interface.c:583
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Частота оновлення (секунди):"
 
 #: ../src/utils.c:43
 msgid "Error"
