Updates from Pootle

--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: lxtask\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-01 14:52+0800\n"
-"PO-Revision-Date: 2009-05-31 16:00+0200\n"
+"PO-Revision-Date: 2009-12-01 14:04+0100\n"
 "Last-Translator: Hugo Florentino <sysadmin@cips.cu>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,11 +23,11 @@ msgstr ""
 
 #: ../lxtask.desktop.in.h:1
 msgid "Manage running processes"
-msgstr ""
+msgstr "Administrar procesos en ejecución"
 
 #: ../lxtask.desktop.in.h:2
 msgid "Process manager"
-msgstr ""
+msgstr "Administrador de procesos"
 
 #: ../lxtask.desktop.in.h:3 ../src/interface.c:58
 msgid "Task Manager"
@@ -209,7 +209,7 @@ msgstr "LXTask"
 #. gtk_about_dialog_set_logo( (GtkAboutDialog*)about_dlg, gdk_pixbuf_new_from_file(  PACKAGE_DATA_DIR"/pixmaps/lxtask.png", NULL ) );
 #: ../src/interface.c:377
 msgid "Copyright (C) 2008 LXDE team"
-msgstr "Copyright (C) 2008 LXDE team"
+msgstr "Copyright (C) 2008 Equipo LXDE"
 
 #: ../src/interface.c:378
 msgid "Lightweight task manager for LXDE project"
@@ -217,15 +217,16 @@ msgstr "Administrador de tareas ligero para el escritorio LXDE"
 
 #: ../src/interface.c:578
 msgid "Preferences"
-msgstr ""
+msgstr "Preferencias"
 
 #: ../src/interface.c:582
 msgid "General"
-msgstr ""
+msgstr "General"
 
 #: ../src/interface.c:583
+#, fuzzy
 msgid "Refresh rate (seconds):"
-msgstr ""
+msgstr "Tasa de refresco (segundos):"
 
 #: ../src/utils.c:43
 msgid "Error"
